2009-12-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/CompletionDatabaseTests.cs: Track
	  numbers of refs in test project. Add a test to confirm that
	  types can't be resolved from refs of refs. Comment out the
	  "non deep search" test since deep search is now the same as
	  shallow search.

2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/MdsTests.cs:
	* MonoDevelop.Projects/MSBuildTests.cs:
	* MonoDevelop.Projects/SolutionTests.cs:
	* MonoDevelop.Projects/LocalCopyTests.cs:
	* MonoDevelop.Projects/WorkspaceTests.cs:
	* MonoDevelop.Projects/TestProjectsChecks.cs: Introduced the
	  ConfigurationSelector class to all methods that previously
	  took a configuration name as string. This eliminates the
	  ambiguity between solution configuration names and project
	  configuration names.

2009-11-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	  Activated unit tests for bug 555523

2009-11-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  tests for 'Bug 555523 - C# code completion gets confused by
	  extension methods with same names as properties'.

2009-11-09  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj:
	* MonoDevelop.Refactoring/BaseRefactorerTests.cs: Added some
	  tests for the base refactorer indenting / remove indenting
	  functions.

2009-11-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit test for 'Bug 553101 – Enum completion does not use
	  type aliases'.

2009-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit test for 'Bug 550185 - Intellisence for extension
	  methods'.

2009-10-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added
	  test for 'Bug 549858 - Refactoring does not change